--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 
 /assets export-ignore
 /tests export-ignore
+/src/Resources/doc export-ignore
 /.gitattributes export-ignore
 /.github export-ignore
 /.gitignore export-ignore
