--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "php": ">=8.0",
     "php-istio/jwt-payload-extractor": "^v1.1.1",
     "symfony/psr7-pack": "^1.0",
-    "symfony/security-bundle": "^5.3"
+    "symfony/security-bundle": "^5.3||^6.0"
   },
   "autoload": {
     "psr-4": {
@@ -30,9 +30,9 @@
     }
   },
   "require-dev": {
-    "symfony/browser-kit": "^5.3",
-    "symfony/console": "^5.3",
-    "symfony/framework-bundle": "^5.3",
-    "symfony/phpunit-bridge": "^5.3"
+    "symfony/browser-kit": "^5.3||^6.0",
+    "symfony/console": "^5.3||^6.0",
+    "symfony/framework-bundle": "^5.3||^6.0",
+    "symfony/phpunit-bridge": "^5.3||^6.0"
   }
 }
